<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="always" />
    <item android:id="@+id/action_sort"
          android:icon="@drawable/ic_action_sort_by_size"
          android:title="@string/action_sort"
          android:showAsAction="always" >
        <menu>
            <item
                    android:id="@+id/precio_asc"
                    android:title="Precio ascendente" />
            <item
                    android:id="@+id/precio_dsc"
                    android:title="Precio descendente" />
            <item
                    android:id="@+id/fecha_asc"
                    android:title="Fecha ascendente" />
            <item
                    android:id="@+id/fecha_dsc"
                    android:title="Fecha descendente" />
            <item
                    android:id="@+id/relevancia_asc"
                    android:title="Relevancia ascendente" />
            <item
                    android:id="@+id/relevancia_dsc"
                    android:title="Relevancia descendente" />
        </menu>
    </item>
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always" />
    <item android:id="@+id/action_contact"
        android:icon="@drawable/ic_action_contact"
        android:title="@string/action_contact"
        android:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/telefono"
                android:title="Llamar" />
            <item
                android:id="@+id/email"
                android:title="Enviar E-Mail" />

        </menu>
        </item>
    <item android:id="@+id/action_amenities"
        android:icon="@drawable/ic_action_amenities"
        android:title="@string/action_amenities"
        android:showAsAction="always" />
    <item android:id="@+id/action_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/action_location"
        android:showAsAction="always" />
</menu>
