<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:scrollbars="vertical"
    android:background="@drawable/splash_screen"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent_white"
        >


        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_txt"
                android:textSize="7pt"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/numeroPublicacion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"></TextView>

            <TextView
                android:id="@+id/direccion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"></TextView>

            <TextView
                android:id="@+id/barrio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="#000000"
                android:textSize="7pt"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_hint"
                android:textColorHint="#000000"
                android:textSize="7pt"
                android:inputType="phone" />

            <EditText
                android:id="@+id/hsRespuesta"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hr_hint"
                android:textColorHint="#000000"
                android:textSize="7pt"/>

            <EditText
                android:id="@+id/mensaje"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mensaje_hint"
                android:textColorHint="#000000"
                android:inputType="textMultiLine"
                android:textSize="7pt"/>

            <Button
                android:id="@+id/button_enviar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/holo_blue"
                android:text="@string/button_enviar"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>