<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:background="@color/transparent_black"
            android:layout_marginTop="200dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            >

            <!--Put form controls here-->
            <TextView
                android:id="@+id/barriolabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barrio"
                android:textSize="6pt"
                android:textColor="@color/white"
                ></TextView>

            <AutoCompleteTextView
                android:id="@+id/barrio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:completionHintView="@layout/spinner_dropdown_item"
                android:textColor="@color/white"
                android:textSize="5pt"
                android:ems="200">

                <requestFocus />
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/tipo_propiedad_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tipo_propiedad_txt"
                android:textColor="@color/white"
                android:textSize="6pt"></TextView>

            <Spinner
                android:id="@+id/tipo_propiedad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:textColor="@color/white"
                android:prompt="@string/tipo_propiedad_txt"></Spinner>

            <TextView
                android:id="@+id/operacion_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/operacion_txt"
                android:textColor="@color/white"
                android:textSize="6pt"></TextView>

            <Spinner
                android:id="@+id/operacion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:textColor="@color/white"
                android:prompt="@string/operacion_txt"></Spinner>

            <TextView
                android:id="@+id/ambientes_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambientes_txt"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="6pt"></TextView>

            <Spinner
                android:id="@+id/ambientes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:textColor="@color/white"
                android:prompt="@string/ambientes_txt"></Spinner>

            <Button
                android:id="@+id/button_buscar"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/button_buscar"
                android:textColor="@color/white"
                android:background="@color/holo_blue"
                android:textSize="6pt" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>